--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,71 @@
+accelerate==1.2.0
+aiohappyeyeballs==2.4.4
+aiohttp==3.11.10
+aiosignal==1.3.1
+async-timeout==5.0.1
+attrs==24.2.0
 beautifulsoup4==4.12.3
 certifi==2024.8.30
 charset-normalizer==3.4.0
 cssselect==1.2.0
+datasets==3.2.0
+dill==0.3.8
+et_xmlfile==2.0.0
+filelock==3.16.1
 frozendict==2.4.6
+frozenlist==1.5.0
+fsspec==2024.9.0
 html5lib==1.1
+huggingface-hub==0.26.5
 idna==3.10
+Jinja2==3.1.4
 lxml==5.3.0
+MarkupSafe==3.0.2
+mpmath==1.3.0
+multidict==6.1.0
+multiprocess==0.70.16
 multitasking==0.0.11
+networkx==3.4.2
 numpy==2.2.0
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+openpyxl==3.1.5
+packaging==24.2
 pandas==2.2.3
 peewee==3.17.8
 platformdirs==4.3.6
+propcache==0.2.1
+psutil==6.1.0
+pyarrow==18.1.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
+PyYAML==6.0.2
+regex==2024.11.6
 requests==2.32.3
+safetensors==0.4.5
 six==1.17.0
 soupsieve==2.6
+sympy==1.13.1
+tokenizers==0.21.0
+torch==2.5.1
+tqdm==4.67.1
+transformers==4.47.0
+triton==3.1.0
+typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 webencodings==0.5.1
+xxhash==3.5.0
+yarl==1.18.3
 ycnbc==1.0.8
 yfinance==0.2.50
